Fix issue with overflow and change circles animation

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,7 +14,6 @@ body {
   margin: 0;
   padding: 0;
   background: #e0e0e0;
-  overflow: hidden;
 }
 
 header {
@@ -193,21 +192,22 @@ a {
 .circle, .circle2 {
   background: grey;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 30vw;
+  height: 30vw;
   position: absolute;
   z-index: -1;
 }
 
 .circle {
   background: #002b70;
-  animation: back-animation-1 10s infinite;
+  animation: back-animation-1 20s infinite;
 }
 
 .circle2 {
   right: 0;
+  opacity: .7;
   background: #717891;
-  animation: back-animation-2 10s infinite;
+  animation: back-animation-2 20s infinite;
 }
 
 @keyframes back-animation-1 {
@@ -216,7 +216,7 @@ a {
     transform: translate(100vw, -45vh);
   }
   40%{
-    opacity: 1;
+    opacity: .5;
     transform: translate(0,45vh);
   }
   60%{
@@ -224,7 +224,7 @@ a {
     transform: translate(0, -45vh);
   }
   80%{
-    opacity: 1;
+    opacity: .5;
     transform: translate(100vw,-45vh);
   }
   100%{
@@ -238,7 +238,7 @@ a {
     transform: translate(-100vw, -45vh);
   }
   40%{
-    opacity: 1;
+    opacity: .5;
     transform: translate(0, 45vh);
   }
   60%{
@@ -246,7 +246,7 @@ a {
     transform: translate(0, -45vh);
   }
   80%{
-    opacity: 1;
+    opacity: .5;
     transform: translate(-100vw,-45vh);
   }
   100%{
